# RollApp

./: pyproject.toml
eternal_roll/: db.sqlite3  manage.py  my_project.dot  requirements.txt
eternal_roll/eternal_roll/: asgi.py  settings.py  urls.py  wsgi.py
eternal_roll/news/: admin.py  permissions.py  serializers.py  urls.py  views.py
eternal_roll/news/migrations/: 0001_initial.py  0002_archtype_school_spell_discription_spell_arh_type_and_more.py  0003_alter_charskill_char_alter_charskill_skill.py
eternal_roll/news/models/: __init__.py  charlist_models.py  charspell_models.py  component_models.py  klass_models.py  news_models.py  skillcharlist_models.py  spell_models.py  spellcomponent_models.py  spellklass_models.py  statblock_models.py  user_models.py
