[tool.poetry]
name = "eternal_roll"
version = "0.1.0"
description = ""
authors = ["Карлин Иван <kop.02@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
djangorestframework = "^3.15.1"
djoser = "^2.2.2"
pydot = "^2.0.0"
graphviz = "^0.20.3"
pygraphviz = "^1.12"
pillow = "^10.2.0"
django-extensions = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
